src/core-crm/objects/SMS_Template__c/fields/Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Business_Process__c</fullName>
    <description>The Business process and Communication Type</description>
    <label>Business Process</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Automated Cadence SMS</fullName>
            </value>
            <value>
                <fullName>International Automated Cadence SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>