src/core-crm/objects/SMS_Template__c/fields/Cadence_Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Step_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is unique</description>
    <label>Cadence Step Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>