src/core-crm/objects/SMS_Template__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to maintain records if they are active</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>