src/core-crm/objects/SMS_Template__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <description>The content of the message</description>
    <label>Message Content</label>
    <length>160</length>
    <type>Text</type>
</CustomField>