src/core-crm/objects/SMS_Template__c/fields/Related_Send_Definition__c.field-meta.xml
<CustomField>
    <fullName>Related_Send_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to reference related send definition</description>
    <label>Related Send Definition</label>
    <referenceTo>Transactional_Messaging_Configuration__c</referenceTo>
    <relationshipLabel>SMS Templates</relationshipLabel>
    <relationshipName>SMS_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>