src/core-crm/objects/SMS_Template__c/listViews/AllSMSTemplates.listView-meta.xml
<ListView>
    <fullName>AllSMSTemplates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All SMS Templates</label>
</ListView>